--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@
     margin-top: -4%;
     max-width: 80%;
     position: relative;
-    vertical-align: -200px;
+    vertical-align: -100px;
     z-index: 2;
 }
 
@@ -51,19 +51,22 @@
     width: 337px;
 }
 
-.name {
+.title {
     font-family: "source-sans-pro",sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 35px;
     letter-spacing: 0.26em;
     line-height: 1;
-    margin-bottom: 0;
-    margin-top: 28px;
-    position: relative;
     text-transform: uppercase;
     z-index: 2;
     color: #ffffff;
+    bottom: 225px;
+    left: 50%;
+    margin-left: -237px;
+    padding: 0;
+    position: fixed;
+    width: 475px;
 }
 
 .tag {
@@ -71,19 +74,22 @@
     font-style: italic;
     font-weight: 300;
     font-size: 13px;
+    color: #ffffff;
+    z-index: 2;
     letter-spacing: 0.4em;
     line-height: 2.2;
-    margin-top: 2px;
-    position: relative;
     text-transform: uppercase;
-    z-index: 2;
-    color: #ffffff;
+    bottom: 200px;
+    left: 50%;
+    margin-left: -237px;
+    padding: 0;
+    position: fixed;
+    width: 475px;
 }
 
 .links {
     bottom: 50px;
     left: 50%;
-    /*list-style-type: none;*/
     margin-left: -237px;
     padding: 0;
     position: fixed;
