--- a/main.css
+++ b/main.css
@@ -2,17 +2,18 @@
     background-image: url("background.jpg");
     background-position: center center;
     background-size: cover;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    position: fixed;
+    color: #ffffff;
     text-align: center;
     text-rendering: optimizelegibility;
 }
 
 .background::before {
-    content: "";
+    content: '';
     display: inline-block;
     height: 100%;
     margin-right: -0.25em;
@@ -21,12 +22,12 @@
 
 .background::after {
     border: 1px solid rgba(255, 255, 255, 0.2);
+    content: '';
+    position: fixed;
     top: 10px;
     bottom: 10px;
     left: 10px;
     right: 10px;
-    content: "";
-    position: fixed;
 }
 
 .inner {
@@ -34,62 +35,53 @@
     margin-top: -4%;
     max-width: 80%;
     position: relative;
-    vertical-align: -100px;
+    vertical-align: middle;
     z-index: 2;
 }
 
 .inner::before {
-    background-size: 100% auto;
-    content: "";
+    background-size: 100%;
+    content: '';
     display: block;
     height: 337px;
     width: 337px;
+    position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -168px;
     margin-left: -168px;
-    position: absolute;
 }
 
 .title {
-    font-family: "adelle",serif;
+    font-family: "adelle";
     font-style: italic;
     font-weight: 400;
     font-size: 30px;
-    color: #ffffff;
     letter-spacing: 0.26em;
     line-height: 1;
     text-transform: uppercase;
-    bottom: 225px;
-    left: 50%;
-    margin-left: -237px;
-    padding: 0;
-    position: fixed;
-    width: 475px;
+    position: relative;
+    margin-top: 28px;
+    margin-bottom: 0;
     z-index: 2;
 }
 
 .tag {
-    font-family: "adelle",serif;
-    font-style: normal;
-    font-weight: 100;
+    font-family: "fira-sans-2";
+    font-weight: 400;
     font-size: 13px;
-    color: #ffffff;
     letter-spacing: 0.4em;
     line-height: 2.2;
     text-transform: uppercase;
-    bottom: 200px;
-    left: 50%;
-    margin-left: -237px;
-    padding: 0;
-    position: fixed;
-    width: 475px;
+    margin-top: 2px;
+    position: relative;
     z-index: 2;
 }
 
 .links {
     bottom: 50px;
     left: 50%;
+    list-style-type: none;
     margin-left: -237px;
     padding: 0;
     position: fixed;
@@ -111,7 +103,7 @@
 }
 
 .email {
-    font-family: "fira-sans-2",sans-serif;
+    font-family: "fira-sans-2", san-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
@@ -127,15 +119,15 @@
 }
 
 @media (max-width: 600px) {
-    .name {
-        font-size: 30px;
+    .title {
+        font-size: 25px;
         letter-spacing: 0.2em;
     }
 }
 
 @media (max-width: 400px) {
-    .name {
-        font-size: 24px;
+    .title {
+        font-size: 20px;
         letter-spacing: 0.1em;
         margin-top: 20px;
     }
@@ -143,13 +135,13 @@
         font-size: 12px;
         letter-spacing: 0.2em;
     }
-    .wrapper-inner {
+    .inner {
         margin-top: -20%;
     }
-    .wrapper-inner::before {
+    .inner::before {
         height: 200px;
-        margin-left: -100px;
-        margin-top: -100px;
         width: 200px;
+        margin-top: -100px;
+        margin-left: -100px;
     }
 }
