--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block content %}
-<section class="py-4 text-gray-900 dark:text-gray-50">
-  <h1 class="pb-4">{{config.extra.name}}</h1>
-  <h2 class="pb-4">Designer . Builder . Minimalist</h2>
-  <h2 class="pb-4">
+<section class="text-gray-900 dark:text-gray-50">
+  <h1 class="pb-4 md:pb-2">{{config.extra.name}}</h1>
+  <h2 class="pb-4 md:pb-2">Designer . Builder . Minimalist</h2>
+  <h2 class="pb-4 md:pb-2">
     @
     <a
       href="https://stansberryresearch.com/"
@@ -13,10 +13,10 @@
     >
   </h2>
   <ul>
-    <li>
+    <li class="pb-2 md:pb-0">
       <a href="mailto:hi@joshwiegand.com" class="hover:underline"> Email </a>
     </li>
-    <li>
+    <li class="pb-2 md:pb-0">
       <a
         href="https://linkedin.com/in/jrwiegand"
         target="_blank"
@@ -26,7 +26,7 @@
         LinkedIn
       </a>
     </li>
-    <li>
+    <li class="pb-2 md:pb-0">
       <a
         href="https://github.com/jrwiegand"
         target="_blank"
@@ -36,7 +36,7 @@
         GitHub
       </a>
     </li>
-    <li>
+    <li class="pb-2 md:pb-0">
       <a
         href="https://twitter.com/joshrwiegand"
         target="_blank"
@@ -46,7 +46,7 @@
         Twitter
       </a>
     </li>
-    <li>
+    <li class="pb-2 md:pb-0">
       <a
         href="https://www.instagram.com/josh.wiegand"
         target="_blank"
